# simba

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/application/: logger.py  register_assembler.py  signal_service.py
src/domain/: exceptions.py
src/domain/entities/: analog.py  discrete.py
src/domain/value_objects/: enums.py  general.py  modbus_address.py  scaling.py
src/infrastructure/: test.xml  xml_parser.py
src/infrastructure/modbus/: client.py  efkerp.py  server.py
src/modbus_simulator/domain/entities/: signal.py
src/modbus_simulator/domain/value_objects/: modbus_address.py  signal_type.py  signal_value.py
tests/integration/: test_client.py  test_xml_parser.py
tests/unit/: test_modbus_address.py
